--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,5 +33,5 @@ eframe = {git = "https://github.com/emilk/egui", features = ["wgpu"]}
 # egui_dock = "0.2.1"
 egui_dock = {path = "vendor/egui_dock"}
 #egui_extras = "0.19.0"
-egui-kman-additions = {path = "../../../egui-kman-additions"}
+egui-kman-additions = {git = "https://github.com/konkitoman/egui-kman-additions"}
 muzzman-lib = "0.1.0" 
